--- a/Tasker.API/Web.config
+++ b/Tasker.API/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="SQLConnection" connectionString="Data Source=DESKTOP-R6TI5G9\SQLEXPRESS;Initial Catalog=taskerDB; Integrated Security=SSPI" providerName="System.Data.SqlClient" />
     <add name="TaskerAPIContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=TaskerAPIContext-20210330182645; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TaskerAPIContext-20210330182645.mdf" providerName="System.Data.SqlClient" />
-  <add name="TaskContext" connectionString="data source=DESKTOP-R6TI5G9\SQLEXPRESS;initial catalog=taskerDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <add name="TaskContext" connectionString="data source=DESKTOP-R6TI5G9\SQLEXPRESS;initial catalog=taskerDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="TasksDBContext" connectionString="data source=DESKTOP-R6TI5G9\SQLEXPRESS;initial catalog=taskerDB2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
